--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </nav>
 
   <main id="main-container" class="">
-    <section id="" class="max-w-screen-xl mx-auto pt-6 relative">
+    <section id="" class="card-section max-w-screen-xl mx-auto pt-6 relative">
       <!-- card-1 -->
       <div
         class="mx-auto relative flex flex-col md:flex-row my-6 bg-white shadow-sm border border-slate-200 rounded-lg p-6">
@@ -183,7 +183,7 @@
 <!-- Tailwind Modal for showing the donation success message -->
 <div id="congratsModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center hidden">
   <div class="bg-white rounded-lg shadow-lg p-6 max-w-sm mx-auto">
-      <h2 class="text-2xl font-bold mb-4 text-green-500">😊 Thank You!</h2>
+      <h2 class="text-2xl font-bold mb-4 text-green-500">😊Donatiopn received!</h2>
       <p id="donation-amount-info" class="text-gray-700"></p>
       <p id="account-balance-info" class="text-gray-700 mt-2"></p>
       <button id="closeModalButton" class="bg-red-500 text-white px-4 py-2 rounded mt-4">Close</button>
@@ -195,7 +195,7 @@
     <!-- component -->
     <section id="history-container" class="hidden max-w-screen-xl mt-8 flex items-center justify-center px-4 bg-white">
       <div class="max-w-6xl w-full rounded-lg shadow-lg p-4 flex md:flex-row flex-col">
-          <div class="flex-1">
+          <div id="history-card" class="flex-1">
               <h3 class="font-semibold text-lg tracking-wide">Donation History</h3>
               <div id="history-donation-amount" class="text-gray-500 my-1">
                   <!-- Donation history will be displayed here -->
