--- a/blog.html
+++ b/blog.html
@@ -22,37 +22,40 @@
     </style>
 </head>
 <body class="lexend-font relative">
-  <nav class="bg-white border-gray-200 dark:bg-gray-900 sticky shadow-sm top-0 z-50">
-    <div class="bg-[#f9f7f3]">
-      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-        <a href="/blog.html" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <button type="button" 
-            class="text-white bg-teal-600 btn-md font-bold text-xl hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-            Blog
-          </button>
-        </a>
-        <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-          <img class="mx-2" src="./assets/coin.png" alt="" />
-          <h1 class="font-bold text-xl text-gray-500">5500 BDT</h1>
-        </div>
+  <!-- nav -->
 
-        <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-cta">
-          <img class="mx-4" src="./assets/logo.png" class="h-8" alt="Flowbite Logo" />
-          <span class="self-center font-bold text-2xl font-semibold whitespace-nowrap dark:text-white">Donate
-            Bangladesh</span>
+  <nav class="bg-white border-gray-200 dark:bg-gray-900 sticky shadow-sm top-0 z-50">
+    <div class="bg-[#f9f7f3] bg-teal-50">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+            <a href="blog.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <button type="button"
+                    class="text-white bg-teal-600 btn-md font-bold text-xl hover:bg-teal-700 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                    Blog
+                </button>
+            </a>
+            <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+                <img class="mx-2" src="./assets/coin.png" alt="" />
+                <h1 id="account-balance" class="font-bold text-xl text-gray-500">9000 BDT</h1>
+            </div>
+            <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-cta">
+                <img class="mx-4" src="./assets/logo.png" class="h-8" alt="Flowbite Logo" />
+                <span class="self-center font-bold text-2xl font-semibold whitespace-nowrap dark:text-white ">Donate
+                    Bangladesh</span>
+            </div>
         </div>
-      </div>
     </div>
-    <!-- two button -->
+    <!-- two buttons
     <div class="relative justify-center w-full flex md:w-auto md:order-1" id="navbar-cta">
-      <button class="btn btn-xl sm:btn-lg md:btn-md lg:btn-md m-3 bg-teal-600 text-white font-semibold text-xl">
-        Donation
-      </button>
-      <button class="btn btn-outline btn-md sm:btn-sm md:btn-md lg:btn-md m-3 font-semibold text-xl text-white bg-teal-600">
-        History
-      </button>
-    </div>
-  </nav>
+        <button id="donate-menu"
+            class="btn btn-xl sm:btn-lg md:btn-md lg:btn-md m-3 bg-teal-600 text-white font-semibold text-xl hover:bg-teal-700 active">
+            Donation
+        </button>
+        <button id="history-donate-menu"
+            class="btn btn-outline btn-md sm:btn-sm md:btn-md lg:btn-md m-3 font-semibold text-xl text-teal-700 hover:bg-teal-600">
+            History
+        </button>
+    </div> -->
+</nav>
     <main>
         <section id="faq" class="container relative mx-auto py-12 px-2">
             <a href="./index.html" class="flex my-6 items-center text-black bg-teal-700 border border-teal-600 py-2 px-6 gap-2 rounded inline-flex items-center">
