--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 <!-- Tailwind Modal for showing the donation success message -->
 <div id="congratsModal" class="fixed inset-0 bg-gray-800 bg-opacity-50 flex items-center justify-center hidden">
   <div class="bg-white rounded-lg shadow-lg p-6 max-w-sm mx-auto">
-      <h2 class="text-2xl font-bold mb-4 text-green-500">😊Donatiopn received!</h2>
+      <h2 class="text-2xl font-bold mb-4 text-green-500">😊Donation received!</h2>
       <p id="donation-amount-info" class="text-gray-700"></p>
       <p id="account-balance-info" class="text-gray-700 mt-2"></p>
       <button id="closeModalButton" class="bg-red-500 text-white px-4 py-2 rounded mt-4">Close</button>
