--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <!-- card-1 -->
       <div class="mx-auto relative flex flex-col md:flex-row my-6 bg-white shadow-sm border border-slate-200 rounded-lg p-6">
         <div class="relative p-2.5 md:w-2/5 shrink-0 overflow-hidden flex justify-end ">
-          <img src="./assets/noakhali.png" alt="card-image" class="h-full max-w rounded-md md:rounded-lg object-cover " />
+          <img src="./assets/quota-protest.png" alt="card-image" class="h-full max-w rounded-md md:rounded-lg object-cover " />
         </div>
         <div class="p-6 ">
           <div class="my-2">
@@ -82,7 +82,7 @@
     <section class="max-w-screen-xl mx-auto">
       <div class="mx-auto relative flex flex-col md:flex-row my-6 bg-white shadow-sm border border-slate-200 rounded-lg p-6">
         <div class="relative p-2.5 md:w-2/5 shrink-0 overflow-hidden flex justify-end ">
-          <img src="./assets/noakhali.png" alt="card-image" class="h-full max-w rounded-md md:rounded-lg object-cover " />
+          <img src="./assets//feni.png" alt="card-image" class="h-full max-w rounded-md md:rounded-lg object-cover " />
         </div>
         <div class="p-6 ">
           <div class="my-2">
